--- a/wordpress/trunk/localization/mpcx-accordion-en_EN.po
+++ b/wordpress/trunk/localization/mpcx-accordion-en_EN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Accordion\n"
 "POT-Creation-Date: 2016-11-02 07:59+0100\n"
-"PO-Revision-Date: 2016-11-02 08:02+0100\n"
+"PO-Revision-Date: 2016-11-02 08:00+0100\n"
 "Language-Team: Stefan Hüsges\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -11,12 +11,12 @@ msgstr ""
 "X-Poedit-KeywordsList: _;gettext;gettext_noop;__;_e;_n:1,2\n"
 "Last-Translator: \n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: de\n"
+"Language: en\n"
 "X-Poedit-SearchPath-0: ..\n"
 
 #: ../admin/list.php:13 ../admin/edit.php:35
 msgid "Title"
-msgstr "Titel"
+msgstr "Title"
 
 #: ../admin/list.php:16
 msgid "Shortcode"
@@ -24,7 +24,7 @@ msgstr "Shortcode"
 
 #: ../admin/edit.php:56 ../admin/edit.php:70
 msgid "Headline"
-msgstr "Überschrift"
+msgstr "Headline"
 
 #: ../admin/edit.php:58 ../admin/edit.php:72
 msgid "Text"
@@ -32,4 +32,4 @@ msgstr "Text"
 
 #: ../admin/edit.php:67
 msgid "New"
-msgstr "Neu"
+msgstr "New"
