--- a/wordpress/trunk/localization/mpcx-accordion-de_DE.po
+++ b/wordpress/trunk/localization/mpcx-accordion-de_DE.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Accordion\n"
-"POT-Creation-Date: 2016-11-16 16:38+0100\n"
-"PO-Revision-Date: 2016-11-16 16:38+0100\n"
+"POT-Creation-Date: 2016-11-17 09:51+0100\n"
+"PO-Revision-Date: 2016-11-17 09:52+0100\n"
 "Last-Translator: \n"
 "Language-Team: Stefan Hüsges\n"
 "Language: de\n"
@@ -37,6 +37,14 @@ msgstr "Erstellen"
 #: admin/list.php:25
 msgid "Shortcode"
 msgstr "Shortcode"
+
+#: admin/list.php:47
+msgid "Edit"
+msgstr "Bearbeiten"
+
+#: admin/list.php:51
+msgid "Delete"
+msgstr "Löschen"
 
 #: admin/list.php:51
 #, php-format
